--- a/batch/4d_map_annotation_baidu.yml
+++ b/batch/4d_map_annotation_baidu.yml
@@ -1,6 +1,6 @@
 watchers:
   - dag_id: generate_base_data
-    class: RestAPIWatcher
+    class: scheduler.watcher.restapi_watcher.RestAPIWatcher
     fixed_dag_run_conf: 
       - s3_bucket: mv-4d-annotation
       - docker_image: ros:v1.0
@@ -9,7 +9,7 @@ watchers:
     scene_id_keys: ["scene_id"]
     use_scene_id_keys_as_dag_run_id: True
     upstream: 
-      - class: StaticSceneListSensor
+      - class: scheduler.upstream_sensor.static_scene_list_sensor.StaticSceneListSensor
         args:
           scene_list:
             - scene_id: scn_001
@@ -19,7 +19,7 @@ watchers:
             - scene_id: scn_005
 
   - dag_id: nvidia_segmentation
-    class: RestAPIWatcher
+    class: scheduler.watcher.restapi_watcher.RestAPIWatcher
     fixed_dag_run_conf: 
       - docker_image: nvidia-seg:v1.0
       - data_root: mv/data/scene_root
@@ -28,11 +28,11 @@ watchers:
     scene_id_keys: ["scene_id"]
     use_scene_id_keys_as_dag_run_id: False
     upstream:
-      - class: TaskSensor
+      - class: scheduler.upstream_sensor.task_sensor.TaskSensor
         args: {"dag_id": "generate_base_data", "task_id": "generate_image"} 
 
   - dag_id: generate_ipm
-    class: RestAPIWatcher
+    class: scheduler.watcher.restapi_watcher.RestAPIWatcher
     fixed_dag_run_conf: 
       - image: ipm_slot:v1.0
       - input_root: mv/data/scene_root
@@ -40,13 +40,13 @@ watchers:
     scene_id_keys: ["scene_id"]
     use_scene_id_keys_as_dag_run_id: True
     upstream:
-      - class: DagSensor
+      - class: scheduler.upstream_sensor.dag_sensor.DagSensor
         args: {"dag_id": "generate_base_data"} 
-      - class: TaskSensor
-        arsg: {"dag_id": "nvidia_segmentation", "task_id": "fisheye"} 
+      - class: scheduler.upstream_sensor.task_sensor.TaskSensor
+        args: {"dag_id": "nvidia_segmentation", "task_id": "fisheye"} 
 
   - dag_id: image_undistort
-    class: RestAPIWatcher
+    class: scheduler.watcher.restapi_watcher.RestAPIWatcher
     fixed_dag_run_conf: 
       - image: slam:v1.0
       - s5_params: "--endpoint-url http://192.168.1.1:9000"
@@ -54,5 +54,5 @@ watchers:
     scene_id_keys: ["scene_id"]
     use_scene_id_keys_as_dag_run_id: True
     upstream:
-      - class: DagSensor
+      - class: scheduler.upstream_sensor.dag_sensor.DagSensor
         args: {"dag_id": "generate_base_data"}
