--- a/batch/4d_map_annotation_baidu.yml
+++ b/batch/4d_map_annotation_baidu.yml
@@ -1,55 +1,55 @@
 watchers:
-  - dag_id: generate_base_data
-    class: scheduler.watcher.restapi_watcher.RestAPIWatcher
-    fixed_dag_run_conf: 
-      - s3_bucket: mv-4d-annotation
-      - docker_image: ros:v1.0
-      - data_root: mv/data/scene_root
-    max_running_dag_runs: 3
-    scene_id_keys: ["scene_id"]
-    use_scene_id_keys_as_dag_run_id: True
-    upstream: 
-      - class: scheduler.upstream_sensor.static_scene_list_sensor.StaticSceneListSensor
-        args:
-          scene_list:
-            - scene_id: scn_001
-            - scene_id: scn_002
-            - scene_id: scn_003
-            - scene_id: scn_004
-            - scene_id: scn_005
+  # - dag_id: generate_base_data
+  #   class: scheduler.watcher.restapi_watcher.RestAPIWatcher
+  #   fixed_dag_run_conf: 
+  #     s3_bucket: mv-4d-annotation
+  #     docker_image: ros:v1.0
+  #     data_root: mv/data/scene_root
+  #   max_running_dag_runs: 3
+  #   scene_id_keys: ["scene_id"]
+  #   use_scene_id_keys_as_dag_run_id: True
+  #   upstream: 
+  #     - class: scheduler.upstream_sensor.static_scene_list_sensor.StaticSceneListSensor
+  #       args:
+  #         scene_list:
+  #           - scene_id: scn_001
+  #           - scene_id: scn_002
+  #           - scene_id: scn_003
+  #           - scene_id: scn_004
+  #           - scene_id: scn_005
 
-  - dag_id: nvidia_segmentation
-    class: scheduler.watcher.restapi_watcher.RestAPIWatcher
-    fixed_dag_run_conf: 
-      - docker_image: nvidia-seg:v1.0
-      - data_root: mv/data/scene_root
-      - output_dir: seg
-    max_running_dag_runs: 3
-    scene_id_keys: ["scene_id"]
-    use_scene_id_keys_as_dag_run_id: False
-    upstream:
-      - class: scheduler.upstream_sensor.task_sensor.TaskSensor
-        args: {"dag_id": "generate_base_data", "task_id": "generate_image"} 
+  # - dag_id: nvidia_segmentation
+  #   class: scheduler.watcher.restapi_watcher.RestAPIWatcher
+  #   fixed_dag_run_conf: 
+  #     docker_image: nvidia-seg:v1.0
+  #     data_root: mv/data/scene_root
+  #     output_dir: seg
+  #   max_running_dag_runs: 3
+  #   scene_id_keys: ["scene_id"]
+  #   use_scene_id_keys_as_dag_run_id: False
+  #   upstream:
+  #     - class: scheduler.upstream_sensor.task_sensor.TaskSensor
+  #       args: {"dag_id": "generate_base_data", "task_id": "generate_image"} 
 
-  - dag_id: generate_ipm
-    class: scheduler.watcher.restapi_watcher.RestAPIWatcher
-    fixed_dag_run_conf: 
-      - image: ipm_slot:v1.0
-      - input_root: mv/data/scene_root
-    max_running_dag_runs: 3
-    scene_id_keys: ["scene_id"]
-    use_scene_id_keys_as_dag_run_id: True
-    upstream:
-      - class: scheduler.upstream_sensor.dag_sensor.DagSensor
-        args: {"dag_id": "generate_base_data"} 
-      - class: scheduler.upstream_sensor.task_sensor.TaskSensor
-        args: {"dag_id": "nvidia_segmentation", "task_id": "fisheye"} 
+  # - dag_id: generate_ipm
+  #   class: scheduler.watcher.restapi_watcher.RestAPIWatcher
+  #   fixed_dag_run_conf: 
+  #     image: ipm_slot:v1.0
+  #     input_root: mv/data/scene_root
+  #   max_running_dag_runs: 3
+  #   scene_id_keys: ["scene_id"]
+  #   use_scene_id_keys_as_dag_run_id: True
+  #   upstream:
+  #     - class: scheduler.upstream_sensor.dag_sensor.DagSensor
+  #       args: {"dag_id": "generate_base_data"} 
+  #     - class: scheduler.upstream_sensor.task_sensor.TaskSensor
+  #       args: {"dag_id": "nvidia_segmentation", "task_id": "fisheye.task_inside_2"} 
 
   - dag_id: image_undistort
     class: scheduler.watcher.restapi_watcher.RestAPIWatcher
     fixed_dag_run_conf: 
-      - image: slam:v1.0
-      - s5_params: "--endpoint-url http://192.168.1.1:9000"
+      image: slam:v1.0
+      s5_params: "--endpoint-url http://192.168.1.1:9000"
     max_running_dag_runs: 3
     scene_id_keys: ["scene_id"]
     use_scene_id_keys_as_dag_run_id: True
