--- a/batch/dry_run.yml
+++ b/batch/dry_run.yml
@@ -7,16 +7,16 @@ watchers:
       data_root: mv/data/scene_root
     max_running_dag_runs: 3
     scene_id_keys: ["scene_id"]
-    use_scene_id_keys_as_dag_run_id: True
+    triggered_dag_run_id_style: scene_id_keys_with_time
     upstream: 
       - class: scheduler.upstream_sensor.static_scene_list_sensor.StaticSceneListSensor
         args:
           scene_list:
-            - scene_id: scn_001
-            - scene_id: scn_002
-            - scene_id: scn_003
-            - scene_id: scn_004
-            - scene_id: scn_005
+            - scene_id: scn_011
+            - scene_id: scn_012
+            - scene_id: scn_013
+            - scene_id: scn_014
+            - scene_id: scn_015
 
   - dag_id: nvidia_segmentation
     class: scheduler.watcher.restapi_watcher.RestAPIWatcher
@@ -26,7 +26,7 @@ watchers:
       output_dir: seg
     max_running_dag_runs: 3
     scene_id_keys: ["scene_id"]
-    use_scene_id_keys_as_dag_run_id: False
+    triggered_dag_run_id_style: scene_id_keys_with_time
     upstream:
       - class: scheduler.upstream_sensor.task_sensor.TaskSensor
         args: {"dag_id": "generate_base_data", "task_id": "generate_image"} 
@@ -38,7 +38,7 @@ watchers:
       input_root: mv/data/scene_root
     max_running_dag_runs: 3
     scene_id_keys: ["scene_id"]
-    use_scene_id_keys_as_dag_run_id: True
+    triggered_dag_run_id_style: scene_id_keys_with_time
     upstream:
       - class: scheduler.upstream_sensor.dag_sensor.DagSensor
         args: {"dag_id": "generate_base_data"} 
@@ -52,7 +52,7 @@ watchers:
       s5_params: "--endpoint-url http://192.168.1.1:9000"
     max_running_dag_runs: 3
     scene_id_keys: ["scene_id"]
-    use_scene_id_keys_as_dag_run_id: True
+    triggered_dag_run_id_style: scene_id_keys_with_time
     upstream:
       - class: scheduler.upstream_sensor.dag_sensor.DagSensor
         args: {"dag_id": "generate_base_data"}
