--- a/batch/dry_run.yml
+++ b/batch/dry_run.yml
@@ -56,3 +56,19 @@ watchers:
     upstream:
       - class: scheduler.upstream_sensor.dag_sensor.DagSensor
         args: {"dag_id": "generate_base_data"}
+
+
+  - dag_id: sparse_map_recon
+    class: scheduler.watcher.expandable_restapi_watcher.ExpandableRestAPIWatcher
+    fixed_dag_run_conf: 
+      image: slam:v1.0
+      s5_params: "--endpoint-url http://192.168.1.1:9000"
+    max_running_dag_runs: 3
+    scene_id_keys: ["scene_id"]
+    expand_by: {"dag_id": "dag_split_map_generator", "task_id": "generate_split_map", "xcom_key": "return_value", "out_col_name": "split_id"}
+    triggered_dag_run_id_style: scene_id_keys_with_time
+    upstream:
+      - class: scheduler.upstream_sensor.dag_sensor.DagSensor
+        args: {"dag_id": "dag_expandable"}
+      - class: scheduler.upstream_sensor.task_sensor.TaskSensor
+        args: {"dag_id": "nvidia_segmentation", "task_id": "fisheye.task_inside_2"} 
