--- a/batch/dry_run.yml
+++ b/batch/dry_run.yml
@@ -59,13 +59,13 @@ watchers:
 
 
   - dag_id: sparse_map_recon
-    class: scheduler.watcher.expandable_restapi_watcher.ExpandableRestAPIWatcher
+    class: scheduler.watcher.expandable_restapi_watcher.RestAPIWatcher
     fixed_dag_run_conf: 
       image: slam:v1.0
       s5_params: "--endpoint-url http://192.168.1.1:9000"
     max_running_dag_runs: 5
     scene_id_keys: ["scene_id"]
-    expand_by: {"dag_id": "generate_base_data", "task_id": "generate_split_map", "xcom_key": "return_value", "out_col_name": "split_id"}
+    expand_by: {"dag_id": "generate_base_data", "task_id": "generate_split_map", "xcom_key": "return_value", "col_name": "split_id"}
     triggered_dag_run_id_style: scene_id_keys
     upstream:
       - class: scheduler.upstream_sensor.dag_sensor.DagSensor
@@ -86,4 +86,22 @@ watchers:
     upstream:
       - class: scheduler.upstream_sensor.dag_sensor.DagSensor
         args: {"dag_id": "sparse_map_recon"}
+    watch_interval: 5
+
+
+  - dag_id: generate_anno_data
+    class: scheduler.watcher.restapi_watcher.RestAPIWatcher
+    fixed_dag_run_conf: 
+      image: slam:v1.0
+      s5_params: "--endpoint-url http://192.168.1.1:9000"
+    max_running_dag_runs: 5
+    scene_id_keys: ["scene_id"]
+    triggered_dag_run_id_style: scene_id_keys
+    upstream:
+      - class: scheduler.upstream_sensor.dag_sensor.DagSensor
+        args: {"dag_id": "sparse_map_recon"}
+      - class: scheduler.upstream_sensor.dag_sensor.ReducibleDagSensor
+        args: 
+          dag_id: sparse_map_recon
+          reduce_by: {"dag_id": "generate_base_data", "task_id": "generate_split_map", "xcom_key": "return_value", "refer_name": "split_id"}
     watch_interval: 5
